--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.6.2",
     "element-plus": "^2.4.2",
+    "mockjs": "^1.1.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
-    "vue": "^3.3.4"
+    "swiper": "^11.0.4",
+    "vue": "^3.3.4",
+    "vue-awesome-swiper": "^5.0.1",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
